--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,122 +1,266 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
+.header{
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
+  box-shadow: 0 1px 5px #333;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+
+.nav{
   display: flex;
-  justify-content: center;
+  position: relative;
+  height: 70px;
+  justify-content: space-between;
   align-items: center;
+  color: #111;
+  background: rgba(255,255,255,.2);
+  z-index:2;
+  transition: all 0.4s ease-in;
+  
 }
 
-.footer img {
-  margin-left: 0.5rem;
+
+.navTitle{
+  margin-left: 50px;
+  font-size: 22px;
+  font-weight: 900;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  cursor: pointer;
+  position: relative;
+  z-index:2
+}
+.burger {
+  display: none;
+
 }
 
-.footer a {
+.burger div {
+  width: 25px;
+  height: 3px;
+  background: #111;
+  margin: 4px;
+}
+.navbar{
   display: flex;
-  justify-content: center;
+  position: relative;
+  justify-content: space-between;
   align-items: center;
+  padding-right: 80px;
+  z-index: 2;
+  
 }
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
+.navbar a{
+  display: inline-block;
+  margin: 10px 30px;
+  padding: 5px ;
   text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 16px;
+  font-weight: bold;  
+  z-index: 2;
+  
+}
+.navbar a:hover{
+  border-bottom: 4px solid #1983FF;
+  color:#1983FF;
+  
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+/* .contain{
+  margin-top: 70px;
+} */
+
+.footer{
+  padding: 50px 0 ;
+  text-align: center;
+  color: #4A5564;
+  background: #EEEEEE;
+  
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.banner{
+  position: relative;
+  background-image: url('/assets/pic2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -99;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+.oneWord{
+  position: absolute;
+  top:40%;
+  left: 50%;
+  transform: translate(-50%);
+  font-size: 20px;
+  font-weight: 800;
+  font-family: 'Times New Roman', Times, serif;
+  color: #fff;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
+/* .blogListWrapper{
+  position: relative;
+  background: #EEEEEE;
+} */
+
+/* .blogList{
+  position: absolute;
+  top:0;
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+  width: 1000px;
+  height: 300px;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  box-shadow: 0 12px 15px 0 rgba(0,0,0,.25);
+
+} */
+
+.down{
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background-image:url('/assets/down1.png') ;
+  background-size: contain;
+  background-repeat: no-repeat;
+  
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
+@media screen and (max-width:640px) {
+  .header{
     width: 100%;
-    flex-direction: column;
+    box-shadow: 0 1px 5px #333;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    transition: all 0.3s ease-in;
   }
+  .header.changeBoxS{
+    box-shadow: none;
+    background: rgba(255,255,255,.8);
+  }
+  .nav{
+    display: flex;
+    position: relative;
+    height: 70px;
+    justify-content: space-between;
+    align-items: center;
+    color: #111;
+    /* background: rgba(255,255,255,.2); */
+    z-index:2;
+    
+    
+  }
+  
+  .burger {
+    display: block;
+    margin-right: 15px;
+    z-index: 3;
+  }
+  .burger div {
+    transition: 0.3s ease-in-out 0.3s;
+}
+.burger.active .topLine {
+  transform: rotate(45deg) translate(4px, 6px);
+}
+.burger.active .bottomLine {
+  transform: rotate(-45deg) translate(4px, -6px);
+}
+.burger.active .middleLine {
+  opacity: 0;
+  transform: translateX(10px);
+  transition: 0.3s ease-in-out;
+}
+  .navTitle{
+    margin-left: 20px;
+    font-size: 16px;
+    font-weight: 700;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    cursor: pointer;
+    position: relative;
+    z-index:2
+  }
+
+  .navbar{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: absolute;
+    width: 100%;
+    height: 0;
+    z-index: 3;
+    
+  }
+
+  .navbar.open{
+    height: 200px;
+  }
+  .navbar a{
+    /* border: 1px red solid; */
+    margin: 0;
+    padding: 5px;
+    align-self:center;
+    display: none;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    font-weight: bold;  
+    z-index: 2;
+    
+  }
+  .navbar.open a{
+    display: block;
+  }
+  .navbar a:hover{
+    border-bottom: 4px solid #1983FF;
+    color:#1983FF;
+    
+  }
+  .banner{
+    width: 100% !important;
+    height: 400px!important;
+    
+  }
+  .oneWord{
+    position: absolute;
+    top:40%;
+    left: 50%;
+    transform: translate(-50%);
+    font-size: 16px;
+    font-weight: 600;
+    font-family: 'Times New Roman', Times, serif;
+    color: #fff;
+  }
+
+  .down{
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-image:url('/assets/down1.png') ;
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+  }
+  .footer{
+    padding-top: 30px ;
+    text-align: center;
+    color: #4A5564;
+    background: #EEEEEE;
+    
+    
+  }
+  @keyframes sadeIn {
+    from {
+        transform: translateX(40px);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
 }
