--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
-html,
+@tailwind components;
+@tailwind utilities;
+html{
+  
+  overflow-y: auto;
+}
 body {
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  width: 100%;
+  height: 100%;  
 }
 
 a {
