--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,13 @@
 @tailwind utilities;
 
 html{
-  overflow-x: hidden;
-  overflow-y: auto;
+  
+  overflow-y: scroll;
 }
 body {
   padding: 0;
   margin: 0;
-  
+  overflow-x: hidden;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   width: 100%;
