--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,11 @@
 @tailwind utilities;
 
 html{
-  
-  overflow-y: scroll;
+  width: 100%;
+  height: 100%;  
+  padding: 0;
+  margin: 0;
+  overflow-y: auto;
 }
 body {
   padding: 0;
